--- a/app/app/src/main/res/layout/activity_all_chat.xml
+++ b/app/app/src/main/res/layout/activity_all_chat.xml
@@ -33,7 +33,7 @@
         app:layout_constraintVertical_bias="0.725" />
 
     <TextView
-        android:id="@+id/txtVwAllChat"
+        android:id="@+id/txtVwName"
         android:layout_width="268dp"
         android:layout_height="54dp"
         android:textAlignment="center"
@@ -84,7 +84,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="18dp"
         android:background="@drawable/inputbox"
-        android:text="Team #1"
+        android:text="Group 1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
@@ -100,7 +100,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="18dp"
         android:background="@drawable/inputbox"
-        android:text="Team #2"
+        android:text="Group 2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.442"
